tests/diagnostics/catalog/snapshots/ir/IR0023.snap
error[IR0023]: IR_E_GENERIC_BOUND_FAILED
 --> tests/diagnostics/catalog/sources/ir/IR0023.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0023
  = help: keep IR validation diagnostics structured and catalog-backed
